dist_noinst_SCRPITS =		\
	collect-packet.rb

dist_noinst_DATA =					\
	milter-packet-accept-on-body.log		\
	milter-packet-accept-on-connect.log		\
	milter-packet-accept-on-eoh.log			\
	milter-packet-accept-on-eom.log			\
	milter-packet-accept-on-header.log		\
	milter-packet-accept-on-helo.log		\
	milter-packet-accept-on-mail.log		\
	milter-packet-accept-on-rcpt.log		\
	milter-packet-discard-on-body.log		\
	milter-packet-discard-on-connect.log		\
	milter-packet-discard-on-eoh.log		\
	milter-packet-discard-on-eom.log		\
	milter-packet-discard-on-header.log		\
	milter-packet-discard-on-helo.log		\
	milter-packet-discard-on-mail.log		\
	milter-packet-discard-on-rcpt.log		\
	milter-packet-reject-on-body.log		\
	milter-packet-reject-on-connect.log		\
	milter-packet-reject-on-eoh.log			\
	milter-packet-reject-on-eom.log			\
	milter-packet-reject-on-header.log		\
	milter-packet-reject-on-helo.log		\
	milter-packet-reject-on-mail.log		\
	milter-packet-reject-on-rcpt.log		\
	milter-packet-reject-with-text-on-body.log	\
	milter-packet-reject-with-text-on-connect.log	\
	milter-packet-reject-with-text-on-eoh.log	\
	milter-packet-reject-with-text-on-eom.log	\
	milter-packet-reject-with-text-on-header.log	\
	milter-packet-reject-with-text-on-helo.log	\
	milter-packet-reject-with-text-on-mail.log	\
	milter-packet-reject-with-text-on-rcpt.log	\
	milter-packet-tempfail-on-body.log		\
	milter-packet-tempfail-on-connect.log		\
	milter-packet-tempfail-on-eoh.log		\
	milter-packet-tempfail-on-eom.log		\
	milter-packet-tempfail-on-header.log		\
	milter-packet-tempfail-on-helo.log		\
	milter-packet-tempfail-on-mail.log		\
	milter-packet-tempfail-on-rcpt.log		\
	milter-packet.txt
